# smasto

./: ChangeLog  Home.md  Makefile.am  ProjectHome.md  README  README.md  common.hpp  configure.ac  matools.texi  smasto.texi  sms-adjoin.1  sms-adjoin.cpp  sms-blockechelon.1  sms-blockechelon.cpp  sms-copy.1  sms-copy.cpp  sms-info.1  sms-info.cpp  sms-norm.1  sms-norm.cpp  sms-randminor.1  sms-randminor.cpp  sms-random.1  sms-random.cpp  sms-reord.1  sms-reord.cpp  sms-reordcols.1  sms-reordcols.cpp  sms-reordrows.1  sms-reordrows.cpp  sms-rescale.cpp  sms-shrink.1  sms-shrink.cpp  sms-to-svg.1  sms-to-svg.cpp  sms-transpose.1  sms-transpose.cpp  sms-wellknown.cpp
doc/: MANUAL.md
man/: sms-random.1  sms-rescale.1  sms-to-svg.1  sms-wellknown.1
src/: sms-norm.cpp  sms-randminor.cpp  sms-reordrows.cpp  sms-rescale.cpp  sms-shrink.cpp  sms-transpose.cpp
