## Process this file with automake to produce Makefile.in

bin_PROGRAMS = sms-info sms-norm sms-randminor sms-reord sms-rescale sms-transpose
man1_MANS = sms-info.1 sms-norm.1 sms-randminor.1 sms-reord.1 sms-rescale.1 sms-transpose.1

sms_info_SOURCES = sms-info.cpp
sms_norm_SOURCES = sms-norm.cpp
sms_randminor_SOURCES = sms-randminor.cpp
sms_reord_SOURCES = sms-reord.cpp
sms_rescale_SOURCES = sms-rescale.cpp
sms_transpose_SOURCES = sms-transpose.cpp


ACLOCAL_AMFLAGS = -I build-aux/m4